linking blog post

--- a/README
+++ b/README
@@ -1,2 +1,2 @@
 This is an example of using BDD techiniques with a C#, ASP.NET MVC, Specflow, and Selenium (Firefox) or SimpleBrowser (Headless browser).
-It will be explained in more detail on http://blog.lambda3.com.br/
+It is explained in more detail on http://blog.lambda3.com.br/2012/01/experimentando-um-headless-browser-para-net/
